[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo/assets/texture/grabber.png" type="Texture" id=1]
[ext_resource path="res://demo/prefab/Slider.gd" type="Script" id=2]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0, 0, 0, 0.498039 )
grow_begin = 2.0
grow_end = 2.0

[node name="Slider" type="Control"]
modulate = Color( 1, 1, 1, 0.247059 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -832.0
margin_bottom = -580.0
script = ExtResource( 2 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 88.0
margin_right = 188.0
margin_bottom = 20.0
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 1 )
step = 0.1

[node name="Label1" type="Label" parent="."]
margin_left = 4.0
margin_right = 76.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Label"
valign = 1

[node name="Label2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 4.0
margin_right = 76.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1000.0"
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="drag_ended" from="HSlider" to="." method="_on_drag_ended"]
[connection signal="drag_started" from="HSlider" to="." method="_on_drag_started"]
[connection signal="mouse_entered" from="HSlider" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HSlider" to="." method="_on_mouse_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_value_changed"]
